IEI-368053 jdk17, where you can use StandardCharset instead of string variant